Add image column

--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -66,6 +66,11 @@
     <%= form.text_field :quantity %>
   </div>
 
+  <div class="field">
+    <%= form.label :image %>
+    <%= form.text_field :image %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
