--- a/app/views/coins/show.html.erb
+++ b/app/views/coins/show.html.erb
@@ -55,5 +55,10 @@
   <%= @coin.quantity %>
 </p>
 
+<p>
+  <strong>Image:</strong>
+  <%= @coin.image %>
+</p>
+
 <%= link_to 'Edit', edit_coin_path(@coin) %> |
 <%= link_to 'Back', coins_path %>
