--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -1,77 +1,87 @@
-<%= form_with(model: coin, local: true) do |form| %>
-  <% if coin.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(coin.errors.count, "error") %> prohibited this coin from being saved:</h2>
+<div class="col-sm-12" align="center">
+  <div class="container" style="width: 60%">
 
-      <ul>
-      <% coin.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form_with(model: coin, local: true) do |form| %>
+      <% if coin.errors.any? %>
+        <div id="error_explanation">
+          <h2>
+            <%= pluralize(coin.errors.count, "error") %> prohibited this coin from being saved:</h2>
+
+          <ul>
+            <% coin.errors.full_messages.each do |message| %>
+              <li>
+                <%= message %>
+              </li>
+              <% end %>
+          </ul>
+        </div>
+        <% end %>
+
+          <div class="form-group field">
+            <%= form.label :name, class: "control-label" %>
+              <%= form.text_field :name, class: "form-control" %>
+          </div>
+
+          <div class="form-group field">
+            <%= form.label :num_record, class: "control-label" %>
+              <%= form.text_field :num_record, class: "form-control" %>
+          </div>
+
+          <div class="form-group field">
+            <%= form.label :material, class: "control-label" %>
+              <%= form.text_field :material, class: "form-control" %>
+          </div>
+
+          <div class="form-group field">
+            <%= form.label :country, class: "control-label" %>
+              <%= form.text_field :country, class: "form-control" %>
+          </div>
+
+          <div class="form-group field">
+            <%= form.label :denomination, class: "control-label" %>
+              <%= form.text_field :denomination, class: "form-control" %>
+          </div>
+
+          <div class="form-group field">
+            <%= form.label :batch, class: "control-label" %>
+              <%= form.text_field :batch, class: "form-control" %>
+          </div>
+
+          <div class="form-group field">
+            <%= form.label :location, class: "control-label" %>
+              <%= form.text_area :location, class: "form-control" %>
+          </div>
+
+          <div class="form-group field">
+            <%= form.label :issuer, class: "control-label" %>
+              <%= form.text_field :issuer, class: "form-control" %>
+          </div>
+
+          <div class="form-group field">
+            <%= form.label :serial_number, class: "control-label" %>
+              <%= form.text_field :serial_number, class: "form-control" %>
+          </div>
+
+          <div class="form-group field">
+            <%= form.label :part_number, class: "control-label" %>
+              <%= form.text_field :part_number, class: "form-control" %>
+          </div>
+
+          <div class="form-group field">
+            <%= form.label :quantity, class: "control-label" %>
+              <%= form.text_field :quantity, class: "form-control" %>
+          </div>
+
+          <div class="form-group field">
+            <%= form.label :image %>
+              <%= form.file_field :image %>
+          </div>
+
+          <div class="actions">
+            <%= form.submit "Crear Moneda", class: "btn btn-primary" %>
+          </div>
+          <% end %>
+
   </div>
-
-  <div class="field">
-    <%= form.label :num_record %>
-    <%= form.text_field :num_record %>
-  </div>
-
-  <div class="field">
-    <%= form.label :material %>
-    <%= form.text_field :material %>
-  </div>
-
-  <div class="field">
-    <%= form.label :country %>
-    <%= form.text_field :country %>
-  </div>
-
-  <div class="field">
-    <%= form.label :denomination %>
-    <%= form.text_field :denomination %>
-  </div>
-
-  <div class="field">
-    <%= form.label :batch %>
-    <%= form.text_field :batch %>
-  </div>
-
-  <div class="field">
-    <%= form.label :location %>
-    <%= form.text_area :location %>
-  </div>
-
-  <div class="field">
-    <%= form.label :issuer %>
-    <%= form.text_field :issuer %>
-  </div>
-
-  <div class="field">
-    <%= form.label :serial_number %>
-    <%= form.text_field :serial_number %>
-  </div>
-
-  <div class="field">
-    <%= form.label :part_number %>
-    <%= form.text_field :part_number %>
-  </div>
-
-  <div class="field">
-    <%= form.label :quantity %>
-    <%= form.text_field :quantity %>
-  </div>
-
-  <div class="field">
-    <%= form.label :image %>
-    <%= form.file_field :image %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
