--- a/app/views/coins/museum.html.erb
+++ b/app/views/coins/museum.html.erb
@@ -13,6 +13,9 @@ var camera, scene, renderer, controls;
 var objects = [];
 
 var raycaster;
+var mouse = new THREE.Vector2(), INTERSECTED;
+var currentIntersected, sphereInter ;
+
 
 var blocker = document.getElementById('blocker');
 var instructions = document.getElementById('instructions');
@@ -77,7 +80,7 @@ animate();
 
 function init() {
   camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 1, 1000);
-  camera.translateY(16);
+  // camera.translateY(16);
 
   scene = new THREE.Scene();
   scene.background = new THREE.Color(0xffffff);
@@ -154,10 +157,7 @@ function init() {
   document.addEventListener('keydown', onKeyDown, false);
   document.addEventListener('keyup', onKeyUp, false);
 
-  raycaster = new THREE.Raycaster(new THREE.Vector3(), new THREE.Vector3(0, -1, 0), 0, 10);
-
   // floor
-
   geometry = new THREE.PlaneGeometry(800, 800, 0, 0);
   geometry.rotateX(-Math.PI / 2);
   floorTexture = new THREE.TextureLoader().load(
@@ -341,9 +341,9 @@ function init() {
     console.log(coins_array.length);
     scene.add(obj);
     obj.position.set(-80, 0, 0);
+    obj.name = "Museum"
     obj.scale.set(3, 3, 3);
     objects = coins_array
-
   });
 
   // var objectLoader1 = new THREE.ObjectLoader();
@@ -498,6 +498,7 @@ function init() {
   //   obj.rotateY(-Math.PI / 2); 
   //   obj.scale.set(3, 3, 3);
   // });
+  raycaster = new THREE.Raycaster();
 
   renderer = new THREE.WebGLRenderer({
     antialias: true
@@ -508,6 +509,7 @@ function init() {
   document.body.appendChild(renderer.domElement);
 
   //
+  // document.addEventListener( 'mousemove', onDocumentMouseMove, false );
 
   window.addEventListener('resize', onWindowResize, false);
 
@@ -519,25 +521,31 @@ function onWindowResize() {
   camera.updateProjectionMatrix();
 
   renderer.setSize(window.innerWidth, window.innerHeight);
-
 }
+
+// function onDocumentMouseMove( event ) {
+//   event.preventDefault();
+//   mouse.x = ( event.clientX / window.innerWidth ) * 2 - 1;
+//   mouse.y = - ( event.clientY / window.innerHeight ) * 2 + 1;
+// }
+
 
 function animate() {
 
   requestAnimationFrame(animate);
 
   if (controlsEnabled === true) {
+   
+    raycaster.setFromCamera( mouse, camera );
 
-    // raycaster.ray.origin.copy(controls.getObject().position);
-    // raycaster.ray.origin.y -= 10;
-
-    // console.log(objects.length);
+    var intersects = raycaster.intersectObjects(scene.getObjectByName("Museum",true).children);
+    // console.log(scene.getObjectByName("Museum",true));
     
-    // var intersections = raycaster.intersectObjects(objects);
-    // console.log(intersections.length);
+// scene.getChildByName("Museum",true)
 
-    // var onObject = intersections.length > 0;
-    // console.log(onObject)
+
+
+    // var onObject = intersects.length > 0;
     var time = performance.now();
     var delta = (time - prevTime) / 1000;
 
@@ -575,10 +583,20 @@ function animate() {
 
     prevTime = time;
 
-  }
+    if ( intersects.length > 0 ) {
+      if ( INTERSECTED != intersects[ 0 ].object ) {
+        // console.log("soy yo");
+      }else{
+        console.log("found");
+        
+      }
+    } else {
+      console.log("Paila"); 
+    }
+  
 
   renderer.render(scene, camera);
-
+  }
 }
 
 
