--- a/app/views/coins/museum.html.erb
+++ b/app/views/coins/museum.html.erb
@@ -207,16 +207,16 @@ function init() {
        floorTexture1.wrapS = floorTexture1.wrapT = THREE.RepeatWrapping;
        textureMesh =  new THREE.MeshBasicMaterial({
          map: floorTexture1
-       }) 
-      textures_array.push(textureMesh);   
+       })
+      textures_array.push(textureMesh);
     <% end %>
 
   var objectLoader = new THREE.ObjectLoader();
   objectLoader.load("../assets/model_plan/coinmuseum.json", function (obj) {
-    
-    
+
+
     cube = new THREE.CubeGeometry(3, 3, 0.2)
-    
+
     var coins_array = [];
 
     var k = 0
@@ -286,9 +286,9 @@ function init() {
 
         coins_array.push(cube1);
         coins_array.push(cube11);
-        coins_array.push(cube2); 
+        coins_array.push(cube2);
         coins_array.push(cube22);
-      }  
+      }
 
       if (i < -5) {
         cube6 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
@@ -299,64 +299,64 @@ function init() {
         cube66.position.set(66.6, 2.5, i);
         cube66.rotateY(-Math.PI / 2);
         obj.add(cube66);
-        coins_array.push(cube6); 
+        coins_array.push(cube6);
         coins_array.push(cube66);
-        
-      }        
+
+      }
       coins_array.push(cube3);
       coins_array.push(cube33);
-      coins_array.push(cube4); 
-      coins_array.push(cube5);  
+      coins_array.push(cube4);
+      coins_array.push(cube5);
     }
 
     cube7 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
-    cube7.position.set(79.5, 2.5, -15.8);  
+    cube7.position.set(79.5, 2.5, -15.8);
     obj.add(cube7);
     cube77 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
     cube77.position.set(79.5, 2.5, -14.6);
     obj.add(cube77);
-    coins_array.push(cube7); 
+    coins_array.push(cube7);
     coins_array.push(cube77);
 
     cube8 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
-    cube8.position.set(11.5, 2.5, -15.8);  
+    cube8.position.set(11.5, 2.5, -15.8);
     obj.add(cube8);
     cube88 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
     cube88.position.set(11.5, 2.5, -14.6);
     obj.add(cube88);
-    coins_array.push(cube8); 
+    coins_array.push(cube8);
     coins_array.push(cube88);
 
     cube9 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
-    cube9.position.set(21.5, 2.5, -15.8);  
+    cube9.position.set(21.5, 2.5, -15.8);
     obj.add(cube9);
     cube99 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
     cube99.position.set(21.5, 2.5, -14.6);
     obj.add(cube99);
-    coins_array.push(cube9); 
+    coins_array.push(cube9);
     coins_array.push(cube99);
 
     cube10 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
-    cube10.position.set(15.5, 2.5, -20.8);  
+    cube10.position.set(15.5, 2.5, -20.8);
     cube10.rotateY(-Math.PI / 2);
     obj.add(cube10);
     cube101 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
     cube101.position.set(15.5, 2.5, -9.6);
     cube101.rotateY(-Math.PI / 2);
     obj.add(cube101);
-    coins_array.push(cube101); 
+    coins_array.push(cube101);
     coins_array.push(cube10);
 
     cube102 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
-    cube102.position.set(17, 2.5, -20.8); 
-    cube102.rotateY(-Math.PI / 2); 
+    cube102.position.set(17, 2.5, -20.8);
+    cube102.rotateY(-Math.PI / 2);
     obj.add(cube102);
     cube103 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
     cube103.position.set(17, 2.5, -9.6);
     cube103.rotateY(-Math.PI / 2);
     obj.add(cube103);
-    coins_array.push(cube103); 
-    coins_array.push(cube102);    
+    coins_array.push(cube103);
+    coins_array.push(cube102);
     console.log(coins_array.length);
     scene.add(obj);
     obj.position.set(-80, 0, 0);
@@ -368,7 +368,7 @@ function init() {
 var objectLoader1 = new THREE.ObjectLoader();
   objectLoader1.load("../assets/model_plan/coinmuseum.json", function (obj) {
       cube = new THREE.CubeGeometry(3, 3, 0.2)
-    
+
       var coins_array = [];
 
     var k = 0
@@ -438,9 +438,9 @@ var objectLoader1 = new THREE.ObjectLoader();
 
         coins_array.push(cube1);
         coins_array.push(cube11);
-        coins_array.push(cube2); 
+        coins_array.push(cube2);
         coins_array.push(cube22);
-      }  
+      }
 
       if (i < -5) {
         cube6 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
@@ -451,68 +451,68 @@ var objectLoader1 = new THREE.ObjectLoader();
         cube66.position.set(66.6, 2.5, i);
         cube66.rotateY(-Math.PI / 2);
         obj.add(cube66);
-        coins_array.push(cube6); 
+        coins_array.push(cube6);
         coins_array.push(cube66);
-        
-      }        
+
+      }
       coins_array.push(cube3);
       coins_array.push(cube33);
-      coins_array.push(cube4); 
-      coins_array.push(cube5);  
+      coins_array.push(cube4);
+      coins_array.push(cube5);
     }
 
     cube7 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
-    cube7.position.set(79.5, 2.5, -15.8);  
+    cube7.position.set(79.5, 2.5, -15.8);
     obj.add(cube7);
     cube77 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
     cube77.position.set(79.5, 2.5, -14.6);
     obj.add(cube77);
-    coins_array.push(cube7); 
+    coins_array.push(cube7);
     coins_array.push(cube77);
 
     cube8 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
-    cube8.position.set(11.5, 2.5, -15.8);  
+    cube8.position.set(11.5, 2.5, -15.8);
     obj.add(cube8);
     cube88 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
     cube88.position.set(11.5, 2.5, -14.6);
     obj.add(cube88);
-    coins_array.push(cube8); 
+    coins_array.push(cube8);
     coins_array.push(cube88);
 
     cube9 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
-    cube9.position.set(21.5, 2.5, -15.8);  
+    cube9.position.set(21.5, 2.5, -15.8);
     obj.add(cube9);
     cube99 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
     cube99.position.set(21.5, 2.5, -14.6);
     obj.add(cube99);
-    coins_array.push(cube9); 
+    coins_array.push(cube9);
     coins_array.push(cube99);
 
     cube10 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
-    cube10.position.set(15.5, 2.5, -20.8);  
+    cube10.position.set(15.5, 2.5, -20.8);
     cube10.rotateY(-Math.PI / 2);
     obj.add(cube10);
     cube101 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
     cube101.position.set(15.5, 2.5, -9.6);
     cube101.rotateY(-Math.PI / 2);
     obj.add(cube101);
-    coins_array.push(cube101); 
+    coins_array.push(cube101);
     coins_array.push(cube10);
 
     cube102 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
-    cube102.position.set(17, 2.5, -20.8); 
-    cube102.rotateY(-Math.PI / 2); 
+    cube102.position.set(17, 2.5, -20.8);
+    cube102.rotateY(-Math.PI / 2);
     obj.add(cube102);
     cube103 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
     cube103.position.set(17, 2.5, -9.6);
     cube103.rotateY(-Math.PI / 2);
     obj.add(cube103);
-    coins_array.push(cube103); 
-    coins_array.push(cube102);    
+    coins_array.push(cube103);
+    coins_array.push(cube102);
     console.log(coins_array.length);
     scene.add(obj);
     obj.position.set(-350, 0, -150);
-    obj.rotateY(-Math.PI / 2); 
+    obj.rotateY(-Math.PI / 2);
     obj.scale.set(3, 3, 3);
   });
 
@@ -611,6 +611,21 @@ function animate() {
 
     }
 
+    if( controls.getObject().position.x > 210 ){
+      velocity.x = 0;
+      controls.getObject().position.x = 210;
+    }else if( controls.getObject().position.x < -391 ){
+      velocity.x = 0;
+      controls.getObject().position.x = -391;
+    }
+
+    if( controls.getObject( ).position.z < -187 ){
+      velocity.z = 0;
+      controls.getObject( ).position.z = -187;
+    }else if( controls.getObject( ).position.z > 157 ){
+      velocity.z = 0;
+      controls.getObject( ).position.z = 157;
+    }
     prevTime = time;
 
   }
