--- a/app/views/coins/museum.html.erb
+++ b/app/views/coins/museum.html.erb
@@ -892,7 +892,7 @@ function onMouseDown() {
         $("#infoBox").append(intersects[0].object.name[0].id+"<br><br>"+
                              intersects[0].object.name[0].name+"<br><br>"+
                              intersects[0].object.name[0].num_record+"<br><br>"+
-                             intersects[0].object.name[0].material+"<br><br>"+
+                             //intersects[0].object.name[0].material+"<br><br>"+
                              intersects[0].object.name[0].country+"<br><br>"+
                              intersects[0].object.name[0].denomination+"<br><br>"
                              ) // sets text to empty
