--- a/app/views/coins/museum.html.erb
+++ b/app/views/coins/museum.html.erb
@@ -342,7 +342,7 @@ function init() {
   var information = {};
   
 
-  for( var i=0; i< 180; i++) {
+  for( var i=0; i< 276; i++) {
     information[i] = {
                 "id": 0,   
                 "name":"",
@@ -363,15 +363,18 @@ function init() {
   }
     
   //console.log(information[0].A);
-
+   var q = 0;
     <% @coins_all.each do |type| %>
-       information[0].id = '<%=type.id%>'
-       information[0].name = '<%=type.name%>'
-       information[0].num_record = '<%=type.num_record%>'
-       information[0].material = '<%=type.material%>'
-       information[0].country = '<%=type.country%>'
-       information[0].denomination = '<%=type.denomination%>'    
+       information[q].id = '<%=type.id%>'
+       information[q].name = '<%=type.name%>'
+       information[q].num_record = '<%=type.num_record%>'
+       information[q].material = '<%=type.material%>'
+       information[q].country = '<%=type.country%>'
+       information[q].denomination = '<%=type.denomination%>' 
+       q+=1;   
     <% end %>
+
+    console.log(information);
   
   var textures_array = []
 
@@ -397,35 +400,36 @@ function init() {
     
 
 
-  console.log(information[0].B);
+ // console.log(information[0]);
 
 
   
 
   
 
-
+  
+  var e = 0;
 
   var objectLoader = new THREE.ObjectLoader();
   objectLoader.load("../assets/model_plan/coinmuseum.json", function (obj) {
 
 
     cube = new THREE.CubeGeometry(3, 3, 0.2);
-    
+    var k = 0;
 
     var coins_array = [];
 
-    var k = 0;
+    
 
     for (let i = -1; i < 85; i += 5) {
       if (i < 36 || i > 46) {
-        cube1 = new THREE.Mesh(cube ,textures_array[k]); k+=1
+        cube1 = new THREE.Mesh(cube ,textures_array[k]); 
         cube1.position.set(i, 2.5, 4.8);
-        cube1.name = information;
+        cube1.name = information[e]; e += 1; k += 1;
         obj.add(cube1);
-        cube2 =  new THREE.Mesh(cube ,textures_array[k]); k+=1
+        cube2 =  new THREE.Mesh(cube ,textures_array[k]); 
         cube2.position.set(i, 2.5, -35.6);
-        cube2.name = information;
+        cube2.name = information[e]; e += 1; k += 1;
         obj.add(cube2);
         coins_array.push(cube1);
         coins_array.push(cube2);
@@ -434,13 +438,14 @@ function init() {
 
     for (let i = 0; i < 84; i += 5) {
       if (i < 34 || i > 47.5) {
-        cube1 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube1 = new THREE.Mesh(cube ,textures_array[k]); 
         cube1.position.set(i, 2.5, 3.6);
-        cube1.name = information;
+        cube1.name = information[e]; e += 1; k += 1;
         obj.add(cube1);
-        cube2 =  new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube2 =  new THREE.Mesh(cube ,textures_array[k]); 
         cube2.position.set(i, 2.5, -34.3);
-        cube2.name = information;
+        cube2.name = information[e]; e += 1; 
+        k += 1;
         obj.add(cube2);
         coins_array.push(cube1);
         coins_array.push(cube2);
@@ -449,41 +454,47 @@ function init() {
 
 
     for (let i = 2.5; i > -36.5; i -= 5) {
-      cube3 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+      cube3 = new THREE.Mesh(cube ,textures_array[k]); 
       cube3.position.set(-3.4, 2.5, i);
       cube3.rotateY(-Math.PI / 2);
-      cube3.name = information;
+      cube3.name = information[e]; e += 1; k += 1;
       obj.add(cube3);
-      cube33 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+      cube33 = new THREE.Mesh(cube ,textures_array[k]); 
       cube33.position.set(-2, 2.5, i);
       cube33.rotateY(-Math.PI / 2);
-      cube33.name = information;
+      cube33.name = information[e]; e += 1; k += 1;
       obj.add(cube33);
-      cube4 =  new THREE.Mesh(cube ,textures_array[k]); k+=1;
+      cube4 =  new THREE.Mesh(cube ,textures_array[k]); 
       cube4.position.set(85.7, 2.5, i);
       cube4.rotateY(-Math.PI / 2);
+      cube4.name = information[e]; e += 1; k += 1;
       obj.add(cube4);
-      cube5 =  new THREE.Mesh(cube ,textures_array[k]); k+=1;
+      cube5 =  new THREE.Mesh(cube ,textures_array[k]); 
       cube5.position.set(84.3, 2.5, i);
       cube5.rotateY(-Math.PI / 2);
+      cube5.name = information[e]; e += 1; k += 1;
       obj.add(cube5)
 
       if (i > -25 ) {
-        cube1 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube1 = new THREE.Mesh(cube ,textures_array[k]); 
         cube1.position.set(36, 2.5, i);
         cube1.rotateY(-Math.PI / 2);
+        cube1.name = information[e]; e += 1; k += 1;
         obj.add(cube1);
-        cube11 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube11 = new THREE.Mesh(cube ,textures_array[k]); 
         cube11.position.set(35, 2.5, i);
         cube11.rotateY(-Math.PI / 2);
+        cube11.name = information[e]; e += 1; k += 1;
         obj.add(cube11);
-        cube2 =  new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube2 =  new THREE.Mesh(cube ,textures_array[k]); 
         cube2.position.set(46.1, 2.5, i);
         cube2.rotateY(-Math.PI / 2);
+        cube2.name = information[e]; e += 1; k += 1;
         obj.add(cube2);
-        cube22 =  new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube22 =  new THREE.Mesh(cube ,textures_array[k]); 
         cube22.position.set(47.4, 2.5, i);
         cube22.rotateY(-Math.PI / 2);
+        cube22.name = information[e]; e += 1; k += 1;
         obj.add(cube22);
 
 
@@ -494,13 +505,15 @@ function init() {
       }
 
       if (i < -5) {
-        cube6 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube6 = new THREE.Mesh(cube ,textures_array[k]); 
         cube6.position.set(65.1, 2.5, i);
         cube6.rotateY(-Math.PI / 2);
+        cube6.name = information[e]; e += 1; k += 1;
         obj.add(cube6);
-        cube66 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube66 = new THREE.Mesh(cube ,textures_array[k]); 
         cube66.position.set(66.6, 2.5, i);
         cube66.rotateY(-Math.PI / 2);
+        cube66.name = information[e]; e += 1; k += 1;
         obj.add(cube66);
         coins_array.push(cube6);
         coins_array.push(cube66);
@@ -512,51 +525,61 @@ function init() {
       coins_array.push(cube5);
     }
 
-    cube7 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube7 = new THREE.Mesh(cube ,textures_array[k]); 
     cube7.position.set(79.5, 2.5, -15.8);
+    cube7.name = information[e]; e += 1; k += 1;
     obj.add(cube7);
-    cube77 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube77 = new THREE.Mesh(cube ,textures_array[k]); 
     cube77.position.set(79.5, 2.5, -14.6);
+    cube77.name = information[e]; e += 1; k += 1;
     obj.add(cube77);
     coins_array.push(cube7);
     coins_array.push(cube77);
 
-    cube8 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube8 = new THREE.Mesh(cube ,textures_array[k]); 
     cube8.position.set(11.5, 2.5, -15.8);
+    cube8.name = information[e]; e += 1; k += 1;
     obj.add(cube8);
-    cube88 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube88 = new THREE.Mesh(cube ,textures_array[k]); 
     cube88.position.set(11.5, 2.5, -14.6);
+    cube88.name = information[e]; e += 1; k += 1;
     obj.add(cube88);
     coins_array.push(cube8);
     coins_array.push(cube88);
 
-    cube9 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube9 = new THREE.Mesh(cube ,textures_array[k]); 
     cube9.position.set(21.5, 2.5, -15.8);
+    cube9.name = information[e]; e += 1; k += 1;
     obj.add(cube9);
-    cube99 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube99 = new THREE.Mesh(cube ,textures_array[k]); 
     cube99.position.set(21.5, 2.5, -14.6);
+    cube99.name = information[e]; e += 1; k += 1;
     obj.add(cube99);
     coins_array.push(cube9);
     coins_array.push(cube99);
 
-    cube10 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube10 = new THREE.Mesh(cube ,textures_array[k]); 
     cube10.position.set(15.5, 2.5, -20.8);
     cube10.rotateY(-Math.PI / 2);
+    cube10.name = information[e]; e += 1; k += 1;
     obj.add(cube10);
-    cube101 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube101 = new THREE.Mesh(cube ,textures_array[k]); 
     cube101.position.set(15.5, 2.5, -9.6);
     cube101.rotateY(-Math.PI / 2);
+    cube101.name = information[e]; e += 1; k += 1;
     obj.add(cube101);
     coins_array.push(cube101);
     coins_array.push(cube10);
 
-    cube102 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube102 = new THREE.Mesh(cube ,textures_array[k]); 
     cube102.position.set(17, 2.5, -20.8);
     cube102.rotateY(-Math.PI / 2);
+    cube102.name = information[e]; e += 1; k += 1;
     obj.add(cube102);
-    cube103 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube103 = new THREE.Mesh(cube ,textures_array[k]); 
     cube103.position.set(17, 2.5, -9.6);
     cube103.rotateY(-Math.PI / 2);
+    cube103.name = information[e]; e += 1; k += 1;
     obj.add(cube103);
     coins_array.push(cube103);
     coins_array.push(cube102);
@@ -567,22 +590,28 @@ function init() {
     objects = coins_array
   });
 
-  var objectLoader1 = new THREE.ObjectLoader();
+
+
+
+   var objectLoader1 = new THREE.ObjectLoader();
   objectLoader1.load("../assets/model_plan/coinmuseum.json", function (obj) {
-      // cube = new THREE.CubeGeometry(3, 3, 0.2)
+
+    var k = 0;
+    cube = new THREE.CubeGeometry(3, 3, 0.2);
+    e = 138;
+
     var coins_array = [];
 
-    cube = new THREE.CylinderGeometry(2, 2, 0.5,30,0.2)
-    cube.rotateX(-Math.PI / 2);
 
-    var k = 0
     for (let i = -1; i < 85; i += 5) {
       if (i < 36 || i > 46) {
-        cube1 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube1 = new THREE.Mesh(cube ,textures_array[k]); 
         cube1.position.set(i, 2.5, 4.8);
+        cube1.name = information[e]; e += 1; k += 1;
         obj.add(cube1);
-        cube2 =  new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube2 =  new THREE.Mesh(cube ,textures_array[k]); 
         cube2.position.set(i, 2.5, -35.6);
+        cube2.name = information[e]; e += 1; k += 1;
         obj.add(cube2);
         coins_array.push(cube1);
         coins_array.push(cube2);
@@ -591,11 +620,14 @@ function init() {
 
     for (let i = 0; i < 84; i += 5) {
       if (i < 34 || i > 47.5) {
-        cube1 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube1 = new THREE.Mesh(cube ,textures_array[k]); 
         cube1.position.set(i, 2.5, 3.6);
+        cube1.name = information[e]; e += 1; k += 1;
         obj.add(cube1);
-        cube2 =  new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube2 =  new THREE.Mesh(cube ,textures_array[k]); 
         cube2.position.set(i, 2.5, -34.3);
+        cube2.name = information[e]; e += 1; 
+        k += 1;
         obj.add(cube2);
         coins_array.push(cube1);
         coins_array.push(cube2);
@@ -604,40 +636,50 @@ function init() {
 
 
     for (let i = 2.5; i > -36.5; i -= 5) {
-      cube3 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+      cube3 = new THREE.Mesh(cube ,textures_array[k]); 
       cube3.position.set(-3.4, 2.5, i);
-      
+      cube3.rotateY(-Math.PI / 2);
+      cube3.name = information[e]; e += 1; k += 1;
       obj.add(cube3);
-      cube33 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+      cube33 = new THREE.Mesh(cube ,textures_array[k]); 
       cube33.position.set(-2, 2.5, i);
       cube33.rotateY(-Math.PI / 2);
+      cube33.name = information[e]; e += 1; k += 1;
       obj.add(cube33);
-      cube4 =  new THREE.Mesh(cube ,textures_array[k]); k+=1;
+      cube4 =  new THREE.Mesh(cube ,textures_array[k]); 
       cube4.position.set(85.7, 2.5, i);
       cube4.rotateY(-Math.PI / 2);
+      cube4.name = information[e]; e += 1; k += 1;
       obj.add(cube4);
-      cube5 =  new THREE.Mesh(cube ,textures_array[k]); k+=1;
+      cube5 =  new THREE.Mesh(cube ,textures_array[k]); 
       cube5.position.set(84.3, 2.5, i);
       cube5.rotateY(-Math.PI / 2);
+      cube5.name = information[e]; e += 1; k += 1;
       obj.add(cube5)
 
       if (i > -25 ) {
-        cube1 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube1 = new THREE.Mesh(cube ,textures_array[k]); 
         cube1.position.set(36, 2.5, i);
         cube1.rotateY(-Math.PI / 2);
+        cube1.name = information[e]; e += 1; k += 1;
         obj.add(cube1);
-        cube11 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube11 = new THREE.Mesh(cube ,textures_array[k]); 
         cube11.position.set(35, 2.5, i);
         cube11.rotateY(-Math.PI / 2);
+        cube11.name = information[e]; e += 1; k += 1;
         obj.add(cube11);
-        cube2 =  new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube2 =  new THREE.Mesh(cube ,textures_array[k]); 
         cube2.position.set(46.1, 2.5, i);
         cube2.rotateY(-Math.PI / 2);
+        cube2.name = information[e]; e += 1; k += 1;
         obj.add(cube2);
-        cube22 =  new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube22 =  new THREE.Mesh(cube ,textures_array[k]); 
         cube22.position.set(47.4, 2.5, i);
         cube22.rotateY(-Math.PI / 2);
+        cube22.name = information[e]; e += 1; k += 1;
         obj.add(cube22);
+
+
         coins_array.push(cube1);
         coins_array.push(cube11);
         coins_array.push(cube2);
@@ -645,13 +687,15 @@ function init() {
       }
 
       if (i < -5) {
-        cube6 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube6 = new THREE.Mesh(cube ,textures_array[k]); 
         cube6.position.set(65.1, 2.5, i);
         cube6.rotateY(-Math.PI / 2);
+        cube6.name = information[e]; e += 1; k += 1;
         obj.add(cube6);
-        cube66 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+        cube66 = new THREE.Mesh(cube ,textures_array[k]); 
         cube66.position.set(66.6, 2.5, i);
         cube66.rotateY(-Math.PI / 2);
+        cube66.name = information[e]; e += 1; k += 1;
         obj.add(cube66);
         coins_array.push(cube6);
         coins_array.push(cube66);
@@ -663,55 +707,65 @@ function init() {
       coins_array.push(cube5);
     }
 
-    cube7 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube7 = new THREE.Mesh(cube ,textures_array[k]); 
     cube7.position.set(79.5, 2.5, -15.8);
+    cube7.name = information[e]; e += 1; k += 1;
     obj.add(cube7);
-    cube77 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube77 = new THREE.Mesh(cube ,textures_array[k]); 
     cube77.position.set(79.5, 2.5, -14.6);
+    cube77.name = information[e]; e += 1; k += 1;
     obj.add(cube77);
     coins_array.push(cube7);
     coins_array.push(cube77);
 
-    cube8 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube8 = new THREE.Mesh(cube ,textures_array[k]); 
     cube8.position.set(11.5, 2.5, -15.8);
+    cube8.name = information[e]; e += 1; k += 1;
     obj.add(cube8);
-    cube88 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube88 = new THREE.Mesh(cube ,textures_array[k]); 
     cube88.position.set(11.5, 2.5, -14.6);
+    cube88.name = information[e]; e += 1; k += 1;
     obj.add(cube88);
     coins_array.push(cube8);
     coins_array.push(cube88);
 
-    cube9 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube9 = new THREE.Mesh(cube ,textures_array[k]); 
     cube9.position.set(21.5, 2.5, -15.8);
+    cube9.name = information[e]; e += 1; k += 1;
     obj.add(cube9);
-    cube99 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube99 = new THREE.Mesh(cube ,textures_array[k]); 
     cube99.position.set(21.5, 2.5, -14.6);
+    cube99.name = information[e]; e += 1; k += 1;
     obj.add(cube99);
     coins_array.push(cube9);
     coins_array.push(cube99);
 
-    cube10 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube10 = new THREE.Mesh(cube ,textures_array[k]); 
     cube10.position.set(15.5, 2.5, -20.8);
     cube10.rotateY(-Math.PI / 2);
+    cube10.name = information[e]; e += 1; k += 1;
     obj.add(cube10);
-    cube101 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube101 = new THREE.Mesh(cube ,textures_array[k]); 
     cube101.position.set(15.5, 2.5, -9.6);
     cube101.rotateY(-Math.PI / 2);
+    cube101.name = information[e]; e += 1; k += 1;
     obj.add(cube101);
     coins_array.push(cube101);
     coins_array.push(cube10);
 
-    cube102 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube102 = new THREE.Mesh(cube ,textures_array[k]); 
     cube102.position.set(17, 2.5, -20.8);
     cube102.rotateY(-Math.PI / 2);
+    cube102.name = information[e]; e += 1; k += 1;
     obj.add(cube102);
-    cube103 = new THREE.Mesh(cube ,textures_array[k]); k+=1;
+    cube103 = new THREE.Mesh(cube ,textures_array[k]); 
     cube103.position.set(17, 2.5, -9.6);
     cube103.rotateY(-Math.PI / 2);
+    cube103.name = information[e]; e += 1; k += 1;
     obj.add(cube103);
     coins_array.push(cube103);
     coins_array.push(cube102);
-    scene.add(obj);
+    scene.add(obj); 
     obj.position.set(-350, 0, -150);
     obj.rotateY(-Math.PI / 2);
     obj.name = "Museum1"
@@ -885,20 +939,29 @@ function onMouseDown() {
      console.log("Click");
      raycaster.setFromCamera( mouse, camera );
      both_coins = (scene.getObjectByName("Museum",true).children).concat(scene.getObjectByName("Museum1",true).children)
+     //console.log(both_coins);
      var intersects = raycaster.intersectObjects(both_coins);
+
+     console.log(intersects[0].object);
+     console.log(intersects.length );
+     console.log(INTERSECTED != intersects[ 0 ].object);
+     console.log(intersects[0].object.name.country != undefined);
+     console.log(intersects[0].object.name);
      if ( intersects.length > 0 ) {
       if ( INTERSECTED != intersects[ 0 ].object ) {
+        if (intersects[0].object.name.country != undefined){
         $("#infoBox").text("") // sets text to empty
-        $("#infoBox").append(intersects[0].object.name[0].id+"<br><br>"+
-                             intersects[0].object.name[0].name+"<br><br>"+
-                             intersects[0].object.name[0].num_record+"<br><br>"+
-                             //intersects[0].object.name[0].material+"<br><br>"+
-                             intersects[0].object.name[0].country+"<br><br>"+
-                             intersects[0].object.name[0].denomination+"<br><br>"
+        $("#infoBox").append(intersects[0].object.name.id+"<br><br>"+
+                             intersects[0].object.name.name+"<br><br>"+
+                             intersects[0].object.name.num_record+"<br><br>"+
+                             intersects[0].object.name.material+"<br><br>"+
+                             intersects[0].object.name.country+"<br><br>"+
+                             intersects[0].object.name.denomination+"<br><br>"
                              ) // sets text to empty
         $("#infoBox").dialog("open");
           coinPreview = scene.getObjectByName("Coin");
           coinShaderPreview = scene.getObjectByName("CoinShader");
+          
           
           camera.add(coinPreview);
           camera.add(coinShaderPreview);
@@ -911,7 +974,7 @@ function onMouseDown() {
 
           coinPreview.material =   new THREE.MeshBasicMaterial({color: 0xffccaa, map:previewCoinTexture1});
           // //coinPreview.position.set(controls.getObject().position.x, 15, (controls.getObject().position.z )- 30);
-
+        }
       }else{
         console.log("found");
       }
