--- a/app/views/coins/museum.html.erb
+++ b/app/views/coins/museum.html.erb
@@ -116,14 +116,12 @@ var color = new THREE.Color();
 var coinPreview; 
 var previewCoinTexture1;
 var  params = {
-					bloomAmount: 1.0,
+					bloomAmount: 0.2,
 					sunLight: 4.0,
-
 					enabled: true,
 					avgLuminance: 0.7,
 					middleGrey: 0.04,
 					maxLuminance: 16,
-
 					adaptionRate: 2.0
 				};
 
@@ -183,39 +181,6 @@ function init() {
 
   controls = new THREE.PointerLockControls(camera);
   scene.add(controls.getObject());
-
-  // DAT.GUI Related Stuff
-
-  /*var gui = new dat.GUI();
-
-  var cam = gui.addFolder('Camera');
-  cam.add(options.camera, 'speed', 0, 0.0010).listen();
-  cam.add(camera.position, 'y', 0, 100).listen();
-  cam.open();
-
-  var velocity = gui.addFolder('Velocity');
-  velocity.add(options, 'velx', -0.2, 0.2).name('X').listen();
-  velocity.add(options, 'vely', -0.2, 0.2).name('Y').listen();
-  velocity.open();
-
-  var box = gui.addFolder('Cube');
-  box.add(cube.scale, 'x', 0, 3).name('Width').listen();
-  box.add(cube.scale, 'y', 0, 3).name('Height').listen();
-  box.add(cube.scale, 'z', 0, 3).name('Length').listen();
-  box.add(cube.material, 'wireframe').listen();
-  box.open();
-
-  gui.add(options, 'stop');
-  gui.add(options, 'reset');
-  */
-
-
-
-
-
-
-
-
   var onKeyDown = function (event) {
 
     switch (event.keyCode) {
@@ -247,6 +212,10 @@ function init() {
 
       case 67:
         $("#infoBox").dialog("close")
+        coinPreview = scene.getObjectByName("Coin");
+        coinPreview.visible = false;
+        coinPreviewShader = scene.getObjectByName("CoinShader");
+        coinPreviewShader.visible = false;
         break;
 
       case 79:
@@ -960,11 +929,12 @@ function onMouseDown() {
                              ) // sets text to empty
         $("#infoBox").dialog("open");
           coinPreview = scene.getObjectByName("Coin");
-          coinShaderPreview = scene.getObjectByName("CoinShader");
-          
-          
+          coinShaderPreview = scene.getObjectByName("CoinShader"); 
           camera.add(coinPreview);
           camera.add(coinShaderPreview);
+
+          coinPreview.visible = true;
+          coinShaderPreview.visible = true;
           coinShaderPreview.position.set(0, 7, -30);
           coinPreview.position.set(0, 7, -30);
           previewCoinTexture1 = new THREE.TextureLoader().load(intersects[ 0 ].object.material.map.image.currentSrc);
